Them chuc nang moi

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "C++ Launch WSL",
             "type": "cppdbg",
             "request": "launch",
-            "program": "/mnt/d/Demo/KDen/myapp.out",
+            "program": "/mnt/d/KDen/btl_ktlt_2019/a1",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "/mnt/d/Demo/KDen",
+            "cwd": "/mnt/d/KDen/btl_ktlt_2019",
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
